feat: update securityconfigs